--- a/PhenoPad/CustomControl/EHRPageControl.xaml
+++ b/PhenoPad/CustomControl/EHRPageControl.xaml
@@ -37,7 +37,7 @@
         </Flyout>
     </UserControl.Resources>
 
-    <Grid Margin="0 10 0 0" Padding="0 100 0 150" 
+    <Grid Margin="0 10 0 0" Padding="0 100 0 150" x:Name="EHRRootGrid"
           Background="{ThemeResource SystemControlBackgroundChromeWhiteBrush}" 
           Height="{x:Bind EHR_HEIGHT}" Width="{x:Bind EHR_WIDTH}">
         
@@ -63,6 +63,7 @@
         
             <RichEditBox Style="{StaticResource MyRichEditBoxStyle}"                         
                          Background="Transparent" x:Name="EHRTextBox" 
+                         TextWrapping="Wrap"
                          Opacity="0.8"
                          IsSpellCheckEnabled="False"
                          Padding="10 50 10 0"
@@ -71,6 +72,7 @@
             <RichEditBox Style="{StaticResource MyRichEditBoxStyle}"                         
                          Background="WhiteSmoke" x:Name="EHRPreview" 
                          Visibility="Collapsed"
+                         TextWrapping="Wrap"
                          Opacity="0.6"
                          IsSpellCheckEnabled="False"
                          Padding="10 50 10 0"
@@ -93,46 +95,48 @@
             </Button>-->
 
             <RelativePanel x:Name="inputgrid" Canvas.ZIndex="999" Visibility="Collapsed" >
-                <Grid>
+
+                <Grid Grid.Row="1" Background="WhiteSmoke" BorderBrush="DarkGray"
+                        BorderThickness="1" CornerRadius="10" x:Name="inputRootGrid">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="60"/>
-                        <RowDefinition Height="200"/>
-                        <RowDefinition Height="90"/>
+                        <RowDefinition x:Name="inputCanvasRow" Height="200"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-
-                    <Grid Background="WhiteSmoke" CornerRadius="10" Grid.Row="0"
-                            BorderThickness="1" BorderBrush="DarkGray">
+                        
+                    <Grid Background="WhiteSmoke" Grid.Row="0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
                             <ColumnDefinition Width="800"/>
+                            <ColumnDefinition Width="60"/>
                         </Grid.ColumnDefinitions>
 
                         <Button Background="WhiteSmoke" Foreground="PaleVioletRed" Grid.Column="0" Grid.Row="1"
-                                Height="60" Width="40"
-                                Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Left"
-                                Click="ClearInput"
-                                RelativePanel.AlignLeftWithPanel="True">
+                            Height="60" Width="40"
+                            Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Left"
+                            Click="ClearInput"
+                            RelativePanel.AlignLeftWithPanel="True">
                             <SymbolIcon Symbol="Clear"/>
                         </Button>
 
 
                         <!-- recongtion result of current line -->
                         <StackPanel Name="curLineWordsStackPanel" Orientation="Horizontal" Spacing="6" HorizontalAlignment="Left"
-                                    RelativePanel.AlignLeftWithPanel="True"
-                                    Grid.Column="1"
-                                    Padding="10 0 10 0" />
+                                RelativePanel.AlignLeftWithPanel="True"
+                                Grid.Column="2"
+                                Padding="10 0 10 0" />
 
                         <ListView Visibility="Collapsed" Padding="5 0 0 0"
-                                  ScrollViewer.HorizontalScrollMode="Enabled"
-                                  ScrollViewer.VerticalScrollMode="Disabled"
-                                  ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-                                  ScrollViewer.IsHorizontalRailEnabled="True"
-                                  x:Name="curLineWordsListView"
-                                  IsItemClickEnabled="True"
-                                  >
+                                ScrollViewer.HorizontalScrollMode="Enabled"
+                                ScrollViewer.VerticalScrollMode="Disabled"
+                                ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                                ScrollViewer.IsHorizontalRailEnabled="True"
+                                x:Name="curLineWordsListView"
+                                IsItemClickEnabled="True"
+                                >
                             <ListView.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <VirtualizingStackPanel  Orientation="Horizontal"/>
@@ -144,22 +148,32 @@
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </ListView>
-                        <Button Background="WhiteSmoke" Grid.Column="2" Grid.Row="1"
-                                Height="60" Width="90"
-                                Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Right"
-                                Click="InsertToEHRClick"
-                                RelativePanel.AlignLeftWithPanel="True">
+                        <Button Background="WhiteSmoke" Grid.Column="1"
+                            Height="60" Width="40"
+                            Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Right"
+                            Click="ToggleInsertMode"
+                            RelativePanel.AlignRightWithPanel="True">
+                            <SymbolIcon x:Name="insertSymbol" Symbol="Keyboard" Margin="-10 -10 0 0">
+                                <SymbolIcon.RenderTransform>
+                                    <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
+                                </SymbolIcon.RenderTransform>
+                            </SymbolIcon>
+                        </Button>
+                        <Button Background="WhiteSmoke" Grid.Column="3"
+                            Height="60" Width="60"
+                            Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Right"
+                            Click="InsertToEHRClick"
+                            RelativePanel.AlignRightWithPanel="True">
                             <SymbolIcon Symbol="Add" Foreground="ForestGreen"/>
                         </Button>
+
                     </Grid>
 
-                    <Grid Grid.Row="1" Background="WhiteSmoke" BorderBrush="DarkGray" Padding="0 10 0 0"
-                          BorderThickness="1" CornerRadius="10" >
-                        <Canvas x:Name="inputCanvasbg" />
-                        <InkCanvas x:Name="inputInkCanvas" />
-                    </Grid>
-                    
+                    <RichEditBox Grid.Row="1" BorderThickness="0" x:Name="inputTypeBox" FontSize="28" Visibility="Collapsed"/>
+                    <Canvas Grid.Row="1" Background="White" x:Name="inputCanvasbg" />
+                    <InkCanvas Grid.Row="1" x:Name="inputInkCanvas" />
                 </Grid>
+                    
             </RelativePanel>
 
             <StackPanel x:Name="SelectionMenu" Visibility="Collapsed" Spacing="10" Orientation="Vertical">
