--- a/PhenoPad/CustomControl/EHRPageControl.xaml
+++ b/PhenoPad/CustomControl/EHRPageControl.xaml
@@ -94,7 +94,7 @@
                 <SymbolIcon Foreground="PaleVioletRed" Symbol="Clear"/>
             </Button>-->
 
-            <RelativePanel x:Name="inputgrid" Canvas.ZIndex="999" Visibility="Collapsed" >
+            <RelativePanel x:Name="inputgrid" Canvas.ZIndex="999" Visibility="Visible" Opacity="0">
 
                 <Grid Grid.Row="1" Background="WhiteSmoke" BorderBrush="DarkGray"
                         BorderThickness="1" CornerRadius="10" x:Name="inputRootGrid">
@@ -108,6 +108,7 @@
                         
                     <Grid Background="WhiteSmoke" Grid.Row="0">
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="40"/>
                             <ColumnDefinition Width="40"/>
                             <ColumnDefinition Width="40"/>
                             <ColumnDefinition Width="800"/>
@@ -126,7 +127,7 @@
                         <!-- recongtion result of current line -->
                         <StackPanel Name="curLineWordsStackPanel" Orientation="Horizontal" Spacing="6" HorizontalAlignment="Left"
                                 RelativePanel.AlignLeftWithPanel="True"
-                                Grid.Column="2"
+                                Grid.Column="3"
                                 Padding="10 0 10 0" />
 
                         <ListView Visibility="Collapsed" Padding="5 0 0 0"
@@ -148,18 +149,32 @@
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </ListView>
-                        <Button Background="WhiteSmoke" Grid.Column="1"
+                        <ToggleButton Background="WhiteSmoke" Grid.Column="1"
                             Height="60" Width="40"
-                            Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Right"
+                            x:Name="TypeToggleBtn"
+                            Style="{StaticResource MyToggleButtonStyle}" HorizontalAlignment="Right"
                             Click="ToggleInsertMode"
                             RelativePanel.AlignRightWithPanel="True">
-                            <SymbolIcon x:Name="insertSymbol" Symbol="Keyboard" Margin="-10 -10 0 0">
+                            <SymbolIcon Symbol="Keyboard" Margin="-10 -10 0 0">
                                 <SymbolIcon.RenderTransform>
                                     <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
                                 </SymbolIcon.RenderTransform>
                             </SymbolIcon>
-                        </Button>
-                        <Button Background="WhiteSmoke" Grid.Column="3"
+                        </ToggleButton>
+                        <ToggleButton Background="WhiteSmoke" Grid.Column="2"
+                            Height="60" Width="40"
+                            x:Name="HWToggleBtn"
+                            Style="{StaticResource MyToggleButtonStyle}" HorizontalAlignment="Right"
+                            Click="ToggleInsertMode"
+                            RelativePanel.AlignRightWithPanel="True">
+                            <SymbolIcon Symbol="Edit" Margin="-10 -10 0 0">
+                                <SymbolIcon.RenderTransform>
+                                    <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
+                                </SymbolIcon.RenderTransform>
+                            </SymbolIcon>
+                        </ToggleButton>
+
+                        <Button Background="WhiteSmoke" Grid.Column="4"
                             Height="60" Width="60"
                             Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Right"
                             Click="InsertToEHRClick"
@@ -170,7 +185,7 @@
                     </Grid>
 
                     <RichEditBox Grid.Row="1" BorderThickness="0" x:Name="inputTypeBox" FontSize="28" Visibility="Collapsed"/>
-                    <Canvas Grid.Row="1" Background="White" x:Name="inputCanvasbg" />
+                    <Canvas Grid.Row="1" Height="200" Background="White" x:Name="inputCanvasbg" />
                     <InkCanvas Grid.Row="1" x:Name="inputInkCanvas" />
                 </Grid>
                     
@@ -208,9 +223,16 @@
             <StackPanel x:Name="cpMenu" Visibility="Collapsed" Spacing="10" Orientation="Vertical"  >
                 <Grid CornerRadius="20" BorderThickness="2" BorderBrush="LightGray" Background="White">
                     <Button Style="{StaticResource ButtonStyle1}" Background="WhiteSmoke"  Width="250" Height="100"
-                            Click="UndoOperation"
+                            Click="ClearAllFormats"
                             HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
-                        <TextBlock Text="Undo" FontWeight="SemiBold" FontSize="30" />
+                        <TextBlock Text="Clear Deletes" FontWeight="SemiBold" FontSize="30" />
+                    </Button>
+                </Grid>
+                <Grid CornerRadius="20" BorderThickness="2" BorderBrush="LightGray" Background="White">
+                    <Button Style="{StaticResource ButtonStyle1}" Background="WhiteSmoke"  Width="250" Height="100"
+                            Click="ClearAllFormats"
+                            HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+                        <TextBlock Text="Clear Highlights" FontWeight="SemiBold" FontSize="30" />
                     </Button>
                 </Grid>
 
